--- a/arch/arm64/boot/dts/qcom/sm7150-xiaomi-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm7150-xiaomi-common.dtsi
@@ -45,7 +45,7 @@
 		ranges;
 
 		stdout-path = "serial0:115200n8";
-		bootargs = "earlycon console=ttyMSM0,115200";
+		bootargs = "earlycon console=tty0 PMOS_NOSPLASH";
 
 		framebuffer: framebuffer@9c000000 {
 			compatible = "simple-framebuffer";
@@ -106,6 +106,28 @@
 		regulator-max-microvolt = <800000>;
 		regulator-always-on;
 		vin-supply = <&vph_pwr>;
+	};
+
+	wcd937x: audio-codec {
+		compatible = "qcom,wcd9375-codec";
+
+		reset-gpios = <&lpass_tlmm 6 GPIO_ACTIVE_HIGH>;
+		pinctrl-0 = <&wcd9375_reset_active>;
+		pinctrl-1 = <&wcd9375_reset_sleep>;
+		pinctrl-names = "default", "sleep";
+
+		vdd-buck-supply = <&vreg_l15a_1p8>;
+		vdd-rxtx-supply = <&vreg_l10a_1p8>;
+		vdd-px-supply = <&vreg_l10a_1p8>;
+		vdd-mic-bias-supply = <&vreg_bob>;
+
+		qcom,micbias1-microvolt = <2700000>;
+		qcom,micbias2-microvolt = <2700000>;
+		qcom,micbias3-microvolt = <2700000>;
+		qcom,rx-device = <&wcd_rx>;
+		qcom,tx-device = <&wcd_tx>;
+
+		#sound-dai-cells = <1>;
 	};
 };
 
@@ -670,6 +692,27 @@
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&sdc2_on>;
 	pinctrl-1 = <&sdc2_off>;
+};
+
+&swr1 {
+	status = "okay";
+
+	wcd_rx: codec@0,4 {
+		compatible = "sdw20217010a00";
+		reg = <0 4>;
+
+		qcom,rx-port-mapping = <1 2 3 4 5>;
+	};
+};
+
+&swr2 {
+	status = "okay";
+	wcd_tx: codec@0,3 {
+		compatible = "sdw20217010a00";
+		reg = <0 3>;
+
+		qcom,tx-port-mapping = <2 3 4 5>;
+	};
 };
 
 &tlmm {
